# checker-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
acadcheck/: .rustfmt.toml  Cargo.toml  README.md  test10  test5
acadcheck/src/: acadnet.rs  error.rs  lib.rs  util.rs
acadcheck/src/acadchecker/: config.rs  mod.rs
acadcheck/src/checker/: acad.rs  config.rs  configuration.rs  diff.rs  mod.rs  prechecker.rs  tests.rs
acadcheck/src/lang/: gcc.rs  make.rs  mod.rs  python.rs
acadcheck/src/language/: gcc.rs  make.rs  mod.rs  python.rs
acadcheck/src/solution/: mod.rs
acadcheck/src/submission/: mod.rs
acadchecker/: Cargo.toml  README.md
acadchecker/src/: checker.rs  main.rs
acadchecker/src/utils/: config.rs  mod.rs
core/: Cargo.toml  Dockerfile  run.sh
core/.cargo/: config.toml
core/.dev.container/: docker-compose.yml
core/.dev.container/.config/: .env  .env.dev  seccomp.json
core/sandbox/: config_gcc.json
core/sandbox/in/: 003.in
core/sandbox/ref/: 005.ref
core/src/: api.rs  main.rs
examples/: checker.json
mw/: .env  Cargo.toml  Dockerfile  README.md  run.sh  sandbox.json
mw/.dev.container/: docker-compose.yaml
mw/.dev.container/.config/: .env
mw/secret/: README.md  env.enc  runner.sh
mw/src/: main.rs
mw/src/api/: mod.rs  utils.rs
mw/src/sandbox/: mod.rs  tests.rs
tests/: Cargo.toml
tests/src/: error_macros.rs  main.rs
