[package]
name = "acadcheck"
authors = ["Irina Nita"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/acadnet-dev/checker-rs"

[features]
# Enable serialization of checker output.
default = ["use-serde"]
use-serde = ["dep:serde"]

[dependencies]
serde = {version="1.0", features = ["derive"], optional = true}
thiserror = "1.0.44"
anyhow = "1.0"
regex = "1.9.1"
tokio = { version = "1", features = ["full"] }
