[package]
name = "mw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
envy = "0.4"
actix-multipart = "0.6.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tempfile = "3.7.0"
actix-form-data = "0.6.2"
futures-util = "0.3.28"
actix-rt = "2.8.0"
anyhow = "1.0.72"
sanitize-filename = "0.4.0"
mime_guess = "2"
aws-config = "0.6"
aws-sdk-s3 = "0.6"
shiplift = "0.7.0"
acadcheck = { version = "0.1.12", features = ["use-serde"] }
zip = "0.6"
regex = "1.9.1"
tempdir = "0.3.7"
serde_json = "1.0.59"
async-trait = "0.1.73"
env_logger = "0.9"
tracing-actix-web = "0.7"
http = "0.2.3"

