[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
acadcheck = { version = "0.1.11", features = ["use-serde"] }
zip = "0.6"

