[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acadcheck = { path = "../acadcheck" }

[[bin]]
name = "error_macros"
path = "src/error_macros.rs"

[[bin]]
name = "prechecker"
path = "src/prechecker.rs"
